# PacketSDK_EndStone

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/SDK/Packet/: Packet.h  PacketIds.h
include/SDK/Packet/Packets/: BookEditPacket.h  DisconnectPacket.h  PlayStatusPacket.h  ServerToClientHandshakePacket.h  SetDisplayObjectivePacket.h  SetScorePacket.h  SetTimePacket.h  TextPacket.h  ToastRequestPacket.h  TransferPacket.h
include/SDK/Types/: Math.hpp  VarTypes.hpp  ZigZag.hpp
include/Utils/: BinaryReader.hpp  BinaryWriter.hpp
src/: TestPlugin.cpp  TestPlugin.h
src/SDK/Packet/Packets/: BookEditPacket.cpp  DisconnectPacket.cpp  PlayStatusPacket.cpp  ServerToClientHandshakePacket.cpp  SetDisplayObjective.cpp  SetScorePacket.cpp  SetTimePacket.cpp  TextPacket.cpp  ToastRequestPacket.cpp  TransferPacket.cpp
